--- a/reality-in-40/reality-in-40.tex
+++ b/reality-in-40/reality-in-40.tex
@@ -733,13 +733,51 @@ disputants, not to speak of the vanity and arrogance they create in
 the hearts of the winners. They should thus be shunned by seekers of
 Truth and of Peace everlasting.
 
-\section*{1}
+\section*{35}
 
 \begin{quote}
-
+  To seek and abide in that which is always attained is true
+  attainment. All other attainments, such as siddhis (thaumaturgic
+  powers), are like those acquired in dreams, which prove to be unreal
+  on waking. Can they who are established in reality and are rid of
+  illusions be ensnared by them?
 \end{quote}
 
-\index{body}\index{sheathes}\index{world}\index{ghost}
+\index{dream}\index{siddhi}\index{waking}
+
+Sometimes we dream that we are flying in the air, or leaping over
+precipices hundreds of feet wide, or stopping a running motor car with
+a light touch of the hand, or doing things which, in the waking state,
+would appear miraculous, yet prove unreal on waking. The
+\emph{siddhis} exhibited in the waking state appear to the man who has
+freed himself from illusion exactly like the dream miracles ---
+utterly false. The greatest of all miracles and all \emph{siddhis} is
+the discovery of and eternal abidence in, oneself.
+
+In the olden days occasionally a \emph{siddhi}-mad youth used to come
+to Ramanashram with the intention of using Bhagavan's presence to
+promote the success of his pursuit of \emph{siddhis}. One or two of
+them were reasonable enough to listen to the advice of the devotees
+and quit the Ashram before it was too late. \footnote{Cohen said
+  ``... quit the Ashram betimes'', but because I am favoring American
+  English over British, I translated it.} But one, more persistent
+that the others, continued to interfere with his uvula and the
+posterior membrane of his tongue, ignoring all advice to desist, until
+after two or three weeks his people had to be called to take him
+away. These were lucky to be saved from the pitfalls of
+\emph{siddhis}. Many others had their \emph{siddhis} turned on them
+like boomerangs adversely affecting their physical and mental
+constitutions. \emph{Siddhis} come naturally to the very few, due to
+yogic practices carried out during their previous \emph{sadhana} and
+\emph{karmic} determinations. These people are safe and sometimes
+helpful to humanity, if the behave reasonably in the \emph{sadhana} of
+this life. They are likely to attain \emph{mukti} if they are lucky
+and favorably disposed --- \emph{sattvic} in other words.
+
+``That which is always attained'' refers to the Self, which is always
+present at the true nature of the ego whether ego is conscious of it
+or not (see comment on verse 30) before the birth of the body, during
+its existence and after its disintegration at death.
 
 \section*{1}
 
