--- a/reality-in-40/reality-in-40.tex
+++ b/reality-in-40/reality-in-40.tex
@@ -779,13 +779,32 @@ present at the true nature of the ego whether ego is conscious of it
 or not (see comment on verse 30) before the birth of the body, during
 its existence and after its disintegration at death.
 
-\section*{1}
+\section*{36}
 
 \begin{quote}
-
+  The thought ``I am not the body'' helps on to meditate ``I am not
+  this: I am THAT'' and to abide as THAT. But why should one forever
+  think ``I am THAT''? Does a man need to always think ``I am a man''?
+  We are always THAT.
 \end{quote}
 
-\index{body}\index{sheathes}\index{world}\index{ghost}
+\index{}
+
+Verse thirty-two discourages the use of the thought ``II am not
+this''. However, this verse avers that even this negative meditation
+is useful to the extend that it leads to the positive meditation ``I
+am THAT''. But even the latter meditation appears to the jnani
+superfluous, in that it is already granted that one is always THAT ---
+``That which is always attained'' (verse thirty-five). That we are not
+the body any thinking man can discover for himself without even
+attempts at Self-realisation. For what dullard can find no difference
+between himself and, say, a chair or table which does not move, think
+of speak like him, yet is made ofthe same elements? There must
+certainly be something in the human body, over and above what there is
+in the other objects. That something is life, or mind, or knowledge,
+or THAT, which \emph{sadhakas} try to isolate from the body and
+perceive by itself, in its aloneness (\emph{kaivalya}). \emph{That} is
+the Self-realisation or self-cognition we are after.
 
 \section*{1}
 
