--- a/reality-in-40/reality-in-40.tex
+++ b/reality-in-40/reality-in-40.tex
@@ -806,13 +806,33 @@ or THAT, which \emph{sadhakas} try to isolate from the body and
 perceive by itself, in its aloneness (\emph{kaivalya}). \emph{That} is
 the Self-realisation or self-cognition we are after.
 
-\section*{1}
+\section*{37}
 
 \begin{quote}
-
+  The theory that in practical life duality prevals, whereas
+  non-duality prevails in the (spiritual) attainment, is
+  false. Whether one is still anxiously searching for the Self, or has
+  actually attained it, one is not other than the tenth man.
 \end{quote}
 
-\index{body}\index{sheathes}\index{world}\index{ghost}
+\index{duality}
+
+Non-duality always prevails, whether viewed from the viewpoint of the
+world or from that or the realised yogi. The realization of Self
+cannot turn the dual into the non-dual. The truth of non-duality
+stands eternally true, as verse one has shown.
+
+The \emph{tenth man} refers to the story in which ten men travelled
+together. After fording a river, they decided to count themselves to
+make sure that none of them had been lost in the crossing. The man who
+counted his nine companions forgot to count himself, which resulted in
+their starting a search for the tenth man --- actually always present
+as the counter himself. The same applies to man, who is always present
+as the eternal non-dual reality, but imagines himself always in
+duality due to his perception of multiplicity --- ``I'' and ``you'',
+the chair, the door, the window and a million other objects. But the
+realized man is free from this false imagination: he knows himself to
+be the tenth man.
 
 \section*{1}
 
