--- a/reality-in-40/reality-in-40.tex
+++ b/reality-in-40/reality-in-40.tex
@@ -834,13 +834,33 @@ the chair, the door, the window and a million other objects. But the
 realized man is free from this false imagination: he knows himself to
 be the tenth man.
 
-\section*{1}
+\section*{38}
 
 \begin{quote}
-
+  So long as a man feels himself the doer, he reaps the fruits of his
+  actions. But as soon as he realizes through inquiry who is the doer,
+  the sense or doership drops off and the threefold karma comes to an
+  end. This is the final Liberation.
 \end{quote}
 
-\index{body}\index{sheathes}\index{world}\index{ghost}
+\index{karma}\index{doer}
+
+Who is the doer? If the body is the doer then we have to attribute
+intelligence to it, an intelligence which it does not possess. The
+identification of the instrument of an act with the actor is the cause
+of much trouble. An illustration will be to the point. A man has a
+grudge against another man and plans to do away with him. He waylays
+him on a dark night, takes a stone and kills him with it. Who is the
+killer? Certainly not the stone,  although it is the stone that has
+done the evil deed, nor is the hand which holds the stone, nor the
+body of which the hand is a part, and which is as insentient, and
+there as innocent, as the stone. It is the mind which, with hatred,
+planned and executed the crime, using the instrumentality of the body
+and the stone. Therefore the mind is the empirical man, or ego who, so
+long as he believes himself to be the actor, has to reap, the fruit of
+his actions effected through a body. But this belief, like the ego
+itself, is not permanent: it passes away immediately an inquiry is
+made into the identity of the doer.
 
 \section*{1}
 
