verse 38 in progress

--- a/reality-in-40/reality-in-40.tex
+++ b/reality-in-40/reality-in-40.tex
@@ -862,6 +862,31 @@ his actions effected through a body. But this belief, like the ego
 itself, is not permanent: it passes away immediately an inquiry is
 made into the identity of the doer.
 
+The triple karma which hangs around the neck of the doer is made up of
+the \emph{sanchita} (accumulated karma), the \emph{prarabdha} (the
+karma which is destined to be worked out in this birth), and the
+\emph{agami} (the karma which becomes active in future births). The
+last class of karma will remain unfulfilled in the case of the person
+who has attained Liberation in the present body, and who will have no
+other births for karma to be worked in.
+
+Questions are sometimes asked concerning the \emph{jnani's prarabdha}
+as to why it does not cease with his attainment of \emph{jnana}, thus
+sparing him suffering that may arise in the form of virulent disease,
+with which some famous \emph{jnanis} are known to be burdened. The
+answer is that \emph{prarabdha} of the \emph{jnani} had been allotted
+to him at or before birth, when he was still liable to the working of
+karma prior to his attainment of \emph{jnana}. As for his suffering,
+it is not as paniful to him as it appears to others: it is greatly
+mitigated by the Realization which unceasingly wells up in his heart.
+
+Some Biblically-oriented Westerners seem to think that the suffering
+of the \emph{jnani} is due to his taking upon himself the sins of his
+disciples. Vedanta denies to transfer of sins and its
+responsibilities. Strict justice is the law of karma which tolerates
+no one to suffer for another's crimes, least of all a Guru, who comes
+to show the way to Truth.
+
 \section*{1}
 
 \begin{quote}
