verse 38 in progress

--- a/reality-in-40/reality-in-40.tex
+++ b/reality-in-40/reality-in-40.tex
@@ -885,7 +885,8 @@ of the \emph{jnani} is due to his taking upon himself the sins of his
 disciples. Vedanta denies to transfer of sins and its
 responsibilities. Strict justice is the law of karma which tolerates
 no one to suffer for another's crimes, least of all a Guru, who comes
-to show the way to Truth.
+to show the way to Truth. Far from being punished he is rewarded by
+the service, love and devotion of the disciples.
 
 \section*{1}
 
