--- a/reality-in-40/reality-in-40.tex
+++ b/reality-in-40/reality-in-40.tex
@@ -886,15 +886,36 @@ disciples. Vedanta denies to transfer of sins and its
 responsibilities. Strict justice is the law of karma which tolerates
 no one to suffer for another's crimes, least of all a Guru, who comes
 to show the way to Truth. Far from being punished he is rewarded by
-the service, love and devotion of the disciples.
+the service, love and devotion of the disciples. Thus the belief in a
+Salvation through the vicarious suffering of the Master is totally
+unacceptable in this path, where each man is regarded as working out
+his own liberation through hard word, self-purification, worship of
+the Guru, self-control, spiritual practices and a full sense of moral
+responsibility. In the whole Vedantic literature one does not find a
+single reference to the transference of sins, but always to karma.
 
-\section*{1}
+
+\section*{39}
 
 \begin{quote}
-
+  Bondage and Liberation exist so long as thoughts of bondage and
+  liberation exist. These come to an end when an inquiry is made into
+  the nature of he who is bound or free, and the ever-present and
+  ever-free Self is realized.
 \end{quote}
 
-\index{body}\index{sheathes}\index{world}\index{ghost}
+\index{bondage}\index{liberation}
+
+This has a close resemblance to the last verse, which makes the sense
+of doership to be the cause of karma. Likewise the sense of being
+bound or free makes bondage and liberation exist. Thus wrong notions
+about oneself are responsible for all the acts of destiny: birth,
+death, bondage, ignorance, etc. But wrong notions can be rectified by
+right knowledge, which can be had only throuh and inquiry into the
+nature of the person who is the victim of wrong notions. Then his real
+Self will reveal itself and will dispel all notions, all senses, and
+all thoughts, including the sense and thought of \emph{jivahood}
+(individuality) itself.
 
 \section*{1}
 
