--- a/reality-in-40/reality-in-40.tex
+++ b/reality-in-40/reality-in-40.tex
@@ -917,13 +917,40 @@ Self will reveal itself and will dispel all notions, all senses, and
 all thoughts, including the sense and thought of \emph{jivahood}
 (individuality) itself.
 
-\section*{1}
+\section*{40}
 
 \begin{quote}
-
+  It is said that Liberation is with form or without form, or with and
+  without form. Let me tell you that Liberation destroys all three as
+  well as the ego which distinguishes between them.
 \end{quote}
 
-\index{body}\index{sheathes}\index{world}\index{ghost}
+\index{liberation}\index{philosophy}
+
+All these forms of liberation, some of which are said to take place in
+a disembodied state in some supersensuous worlds --- \emph{Vaikuntha},
+\emph{Satyaloka}, etc. are hypothetical. At best they offer
+encouragement to the \emph{sadhakas} who are partial to them. The fact
+of the matter is that true and absolute Liberation results only from
+\emph{jnana} (knowledge of the Absolute), which alone can destroy
+ignorance, either in this body or in one of the following bodies. For
+there are no planes or states of consciousness where radical salvation
+is possible, other than the waking state, i.e., in a body, where
+bondage and ignorance are felt and attempts for redemption made; least
+of all in the state of after-death where there is no body to feel the
+limitations and retributions of karma.
+
+Therefore he who aspires to reach the highest has to exert himself
+hard here and now, preferably by the \emph{vichara} method which
+Bhagavan has so graciously propounded and so often reiterated in these
+verses. The determined \emph{sadhaka} will not fail to verify these
+truths by his own experience if he puts them to the test, full of
+confidence, in his own self and the unfailing silent support of the
+Master, who is not other than the very Reality he is so earnestly
+seeking, and who ever and ever abides in his own heart as Existence,
+Consciousness ande Bliss --- \emph{Sat Chit Ananda}.
+
+OM SHANTI SHANTI SHANTIHI
 
 
 
