preface and backcover

--- a/reality-in-40/reality-in-40.tex
+++ b/reality-in-40/reality-in-40.tex
@@ -5,14 +5,61 @@
 
 \begin{document}
 
-\title{Reality in 40 Verses}
-\author{Ramana Maharishi}
+\title{40 Verses on Reality - ``Ulladu Narpadu''}
+\author{Ramana Maharishi \\ Translation and Commentary by S.S. Cohen}
 \maketitle
 
 
 \tableofcontents
 
-\chapter{Introduction}
+\chapter{Preface}
+
+It was not without much hesitation that I acceded to the suggestion of
+one or two of my friends to prepare a simplified translation of Sri
+Bhagavan's ULLADU NARPADU, or \emph{Forty Verses on Reality}, which
+newcomers to Sri Ramanasram, especially the English-speaking
+foreigners who come in increasing numbers might more easily
+understand.
+
+It is generally admitted that Sri Bhagavan's ideas are often beyond
+the reach of the common reader and the beginner. They are made more
+difficult by his Tamil mode of expression and by the spontaneity with
+which he wrote the individual verses, for it was not his intention to
+prduce a compact philosophical system or thesis. He wrote the verses
+as they occurred to him, and they were later arranged by a disciple in
+the order in which we see them in print.
+
+When undertaking this venture, I placed before me six different
+English translations, chose the versions common to the majority of
+them, and wrote these down in an almost conversational English. I
+avoided technical terms and difficult words so far as this could be
+done while remaining faithful to the original. When I had a doubt due
+to lack of agreement between the different translators, I sought the
+help of Tamil scholars in Vellore.
+
+I also wrote brief notes on each verse, developing the verse's main
+points so that in some places the notes read like a paraphrase, but
+without learned quotations or long dissertations. For all that seekers
+(\emph{sadhakas}) need and want is to understand the spirit of
+Bhagavan's utterances and apply it in their spiritual practice
+(\emph{sadhana}).
+
+In these forty verses, as the reader will observe, Bhagavan has
+touched on all the salient points of his teaching, constantly
+stressing the great value and efficacy of the \emph{vichara}, or
+investigation into the nature of the investigator himself. All the
+Masters of the Upanishads maintain that man is not the elements out of
+which his body is made, but the mind, or intelligent principle, or
+being, which uses the body. \emph{That} is the serene blissful Self,
+the absolute, secondless Reality, which all are seeking consciously
+and unconsciously in different ways -- devious or straight, wrong or
+right -- and of which the \emph{sadhaka} endeavors to have a direct
+and full Knowledge.
+
+The synopsis which follows not only gives the gist of every verse, but
+is also intended to help the reader to locate a specific subject. It
+takes the place of an index, which seems out of place in a small work
+like this.
 
 \chapter{Invocation}
 
@@ -966,7 +1013,14 @@ Ramana and his spiritual institute AHAM.com
 
 I took the liberty of changing British English to American English.
 
-Feedback/corrections are welcome: TheQuietCenter\@gmail.com
+Feedback/corrections are welcome: TheQuietCenter\@gmail.com or
 http://www.LivingCosmos.org
+
+\chapter{Back Cover}
+
+A twentieth century Master of Advaita discourses on the discovery of
+that Absolute Reality from which all things proceeed, and which is
+also a person's own real Self. The translation and commentaries are by
+one who knew him and lived close to him for many years.
 
 \end{document}
