--- a/reality-in-40/reality-in-40.tex
+++ b/reality-in-40/reality-in-40.tex
@@ -61,9 +61,37 @@ is also intended to help the reader to locate a specific subject. It
 takes the place of an index, which seems out of place in a small work
 like this.
 
+S.S. Cohen
+
 \chapter{Invocation}
 
-\section*{i}
+\section*{i. Awareness is the nature of Reality}
+
+\begin{quote}
+Without awareness of Reality, can Reality exist? Because this
+awareness-reality, itself free from thought, exists as the source of
+all thoughts, it is called Heart. How to know it? To be as it is
+(thought-free) in the Heart, is to know it.
+\end{quote}
+
+This verse and the next form the Invocation, which customarily
+precedes spiritual and poetic works in Indian literature. It may be
+addressed to a particular deity such as Ganapati, the \emph{deva} in
+charge of poetic effusions, or to the \emph{devas} in general, to a
+favorite \emph{devi}, or to the guru or to one of the three major
+divinities. But Bhagavan, recognising a single Reality from which all
+things proceed, makes his dedication to that, as the pure Awareness
+(\emph{chit}) abiding in the Heart as external existence (sat), or the
+absolute Brahman.
+
+The literal translation of the first sentence of this verse reads:
+'Can there be awareness of that which is other than existence?' This
+makes knowledge or awareness the criterion of existence, because the
+non-existent cannot make itself known. The color, for example, that is
+not visible, or the sound that is not audible, amount to nothing.
+
+
+
 \section*{ii}
 
 \chapter{Text}
