--- a/reality-in-40/reality-in-40.tex
+++ b/reality-in-40/reality-in-40.tex
@@ -90,9 +90,15 @@ makes knowledge or awareness the criterion of existence, because the
 non-existent cannot make itself known. The color, for example, that is
 not visible, or the sound that is not audible, amount to nothing.
 
+\section*{ii. Fear of death is the driving force behind the quest for immortality}
 
+\begin{quote}
+  Those who have an infinite fear of death take refuge in the Feet of
+  the supreme Lord Who is without birth and death. Can the thought of
+  death occur to those who have destroyed their ``I'' and ``mine'' and
+  have become immortal?
+\end{quote}
 
-\section*{ii}
 
 \chapter{Text}
 
@@ -100,7 +106,7 @@ not visible, or the sound that is not audible, amount to nothing.
 \section*{1}
 
 \begin{quote}
-Because the world is seen, we have to infer a common (a Lord)
+Because the world is seen, we have to infer a common cause (a Lord)
 possessing unlimited powers to appear as the diversity. The pictures
 consisting of names and forms, the seer, the canvas, the light ----
 all these are He Himself.
