--- a/reality-in-40/reality-in-40.tex
+++ b/reality-in-40/reality-in-40.tex
@@ -99,6 +99,11 @@ not visible, or the sound that is not audible, amount to nothing.
   have become immortal?
 \end{quote}
 
+Those who most identify themselves with the body are the people who
+fear death most. Seeing the dissolution of the body they deduce their
+own dissolution to be simultaneous with it, and dread the terrible
+Unknown that lurks behind it. Their only hope of safety lies, there,
+in the worship of the Almighty Lord, who alone is deathless.
 
 \chapter{Text}
 
