--- a/reality-in-40/reality-in-40.tex
+++ b/reality-in-40/reality-in-40.tex
@@ -105,6 +105,18 @@ own dissolution to be simultaneous with it, and dread the terrible
 Unknown that lurks behind it. Their only hope of safety lies, there,
 in the worship of the Almighty Lord, who alone is deathless.
 
+But those who through the practice of \emph{sadhana} or spiritual
+discipline have transcended this false identification no longer have
+bodies to be the victims of death. Even the thought of death does not
+occur to them. They are \emph{videhas}, bodiless, although they
+continue to occupy a body.
+
+This verse also implies that by taking refuge in the Lord, these
+fear-torn people will, in course of time, so progress spiritually that
+they will be able to destroy their sense of ``I'' and ``mine'' and
+attain immortality, since the death of the ego will evidently destroy
+death and the thought of death.
+
 \chapter{Text}
 
 
